c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/scalar_expressions/not_void.c
// void expressions are non-scalar, so they can't be used in logical expressions

void f(void);
void g(void);
int main(void) { return !(1 ? f() : g()); }